--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -36,7 +36,7 @@ $tabs_left = (int)$this->template['header-nav-tabs']['absolute-left'];
 $tabs_left += $cat_title_length*10;
 $idCat = Zend_Registry::isRegistered('store_category_list') ? Zend_Registry::get('store_category_list') : null;
 $baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
-$baselogo= Zend_Registry::get('config')->settings->client->default->baselogo;
+
 ?>
     <style>
 
@@ -130,48 +130,42 @@ $baselogo= Zend_Registry::get('config')->settings->client->default->baselogo;
         }
 
     </style>
- <?php
-        $domainshelper = new Default_View_Helper_FetchDomains();
-        $this->domainobjects = $domainshelper->fetchDomainObjects();    
-        $sname = Zend_Registry::get('store_host');
-        $store_config = Zend_Registry::get('store_config');
-    ?>
 
-    <div class="small metamenu" > 
-        <a href="http://openDesktop.org" class="home-link" style="margin-left:5px">
-         <img src="images/system/ocs-logo-rounded-16x16.png" class="logo" /> openDesktop.org 
-         </a> 
-        <a href="#" id="toggleStoreBtn">Browse : <?php echo $store_config['name'];?></a>
-                                  
-        <div class="dropdown-menu" id="toggleStoreContainer" >
-          <div>
-            <div class="row">
-            <?php
-            
+    <div class="small metamenu" >   
+        <?php            
+            $domainshelper = new Default_View_Helper_FetchDomains();
+            $this->domainobjects = $domainshelper->fetchDomainObjects();            
+            echo '<ul class="nav nav-pills meta-nav-top left">';
+            $i = 0;
+            echo '<li class="" style="background-color:#eee; -moz-border-radius: 5px; border-radius: 5px; "><a href="http://openDesktop.org"><img src="images/system/ocs-logo-rounded-16x16.png" class="logo"/> openDesktop.org :</a> </li>';                             
+            $sname = Zend_Registry::get('store_host');
             $preOrder = 0;
             $curOrder = 0;
-            foreach ($this->domainobjects as $obj) {                
+            foreach ($this->domainobjects as $obj) {
                 $o =  $obj['order'];   
                 $curOrder = floor($obj['order']/1000);      
                 if($curOrder<10 or $curOrder>30) continue;
                 $host =$obj['host'];
-                $name =$obj['name']; 
+                $name =$obj['name'];
                 if($curOrder!= $preOrder) $i=0;
 
                 if($curOrder > $preOrder && $preOrder !=0){
-                   echo '</div>';      
+                   echo '</ul></li>';      
                 }
-                
+                if($i==0 && $preOrder !=0) echo '<li class="nav-divider-pling"> &#149; </li>'; 
+
                 if($curOrder==10 && $i==0){
                     // applications                    
-                    echo '<div class="col-lg-4"><b>Applications</b><ul>';                                                                 
+                    echo '<li class="dropdown"><a href="#">Applications</a><ul class="dropdown-menu">';                                                                 
                 }else if($curOrder ==20 && $i ==0){
                     // artworks                    
-                    echo '<div class="col-lg-4"><b>Desktops</b><ul>';                                                                  
+                    echo '<li class="dropdown"><a href="#">Addons</a><ul class="dropdown-menu">';                                                                  
                 }else if($curOrder ==30 && $i ==0){
-                    // multimedia                   
-                    echo '<div class="col-lg-4"><b>Artworks</b><ul>'; 
-                                                                                    
+                    // artworks                    
+                    echo '<li class="dropdown"><a href="#">Desktops</a><ul class="dropdown-menu">';                                                                  
+                }else if($curOrder ==40 && $i ==0){
+                    // multimedia                    
+                    echo '<li class="dropdown"><a href="#">Artwork</a><ul class="dropdown-menu">';                                                                  
                 }                
                 if($sname == $host )
                 {
@@ -180,37 +174,30 @@ $baselogo= Zend_Registry::get('config')->settings->client->default->baselogo;
                 {
                     echo '<li>';
                 }
-                // z.b 150001 ende ==1 go real link otherwise /s/$name 
-                $last_char_check = substr($o, -1);
-                if($last_char_check=='1'){                    
-                    echo '<a href="http://' . $host . '">'.  $name .'</a></li>';     
-                }else{
-                    echo '<a href="http://'.$baseurl.'/s/'.$name.'">'. $name.'</a></li>';     
+
+                $keyword = $obj['meta_keywords'];
+
+                if($keyword!='')
+                {
+                    $keyword = ' - '.$keyword;
                 }
-                
-                echo '<div style="clear:both;"></div>';
+                 // z.b 150001 ende ==1 go real link otherwise /s/$name 
+                $last_char_check = substr($o, -1);                
+
+                echo '<a href="http://' . ($last_char_check=='1'?$host:$baseurl.'/s/'.$name) . '">'.  $name .' <span style="font-size:11px; color:#065893">'.$keyword.'</span></a> </li>';    
 
                 $preOrder = floor($obj['order']/1000);  
                  $i++;                                                  
             }
-               echo '</div>';
-            ?>
-          
-            </div>  
-          </div>
-        </div>
-         <ul class="meta-nav-top meta-nav-top-right" >
+            echo '</ul></li>';   
+            echo '</ul>';                   
+                     
+                ?>
+
+           <ul class="nav nav-pills meta-nav-top right" style="margin-right: 30px;">
                <li><a href="http://blog.opendesktop.org/" target="_blank"> Blog</a> </li>
                <li><a href="http://forum.opendesktop.org/" target="_blank"> Forum</a> </li>
                <li> <a id="aboutContent" href="#">About </a>   </li>              
-               <!--<li> <a id="plings" href="/plings/">Plings </a>   </li>  -->
-          </ul>
-          
+               </ul>
         </div>
-
-        <?php $this->inlineScript()->appendScript(
-    '    $(document).ready(function(){
-            Metaheader.setup();                  
-        });
-    ');
 
