--- a/application/modules/default/views/scripts/partials/header/metaheader.phtml
+++ b/application/modules/default/views/scripts/partials/header/metaheader.phtml
@@ -128,7 +128,9 @@ $baseurl = Zend_Registry::get('config')->settings->client->default->baseurl;
         .dropdown:hover .dropdown-menu {
             margin-left: -16px;
         }
-
+        .dropdown-menu li{
+            width: 100%;
+        }
     </style>
 
     <div class="small metamenu" >   
