--- a/application/modules/default/views/scripts/spam/list.phtml
+++ b/application/modules/default/views/scripts/spam/list.phtml
@@ -32,6 +32,7 @@
                     $helperPrintDate = new Default_View_Helper_PrintDate();
                     $helperBuildProductUrl = new Default_View_Helper_BuildProductUrl();
                     $helperImage = new Default_View_Helper_Image();
+                    $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
 
                     $this->rownum = (1 + (($this->page - 1) * 10));
                     $pageLimit = 10;
@@ -69,6 +70,7 @@
                                 </h3>
 
                                 <b style="display: block; margin-bottom: 5px"><?php echo $this->product['cat_title']?></b>
+                                <b style="display: block; margin-bottom: 5px" class="small">by <a href="<?php echo $helpMemberUrl->buildMemberUrl($this->product['member_id'])?>"><?php echo $this->product['username']?></a></b>
                                 <?php
                                 $helperPackageTypes = new Default_View_Helper_FetchProjectPackageTypes();
                                 $type = $helperPackageTypes->FetchProjectPackageTypes($this->product['project_id']);
@@ -106,11 +108,11 @@
                             </div>
                         </div><!-- END .explore-product -->
                         <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 small"  style="border-top: 1px solid #ccc;font-size: 12px;padding: 10px 0;">
-                            <a href="/backend/project/delete?project_id=<?=$this->product['project_id']?>" class="delete-this">delete product</a>
+                            <a href="/backend/project/delete?project_id=<?=$this->product['project_id']?>" class="delete-this" data-title="Delete this product?">delete product</a>
                             <hr/>
-                            <a href="/backend/user/delete?member_id=<?=$this->product['member_id']?>" class="delete-this">delete user</a>
+                            <a href="/backend/user/delete?member_id=<?=$this->product['member_id']?>" class="delete-this" data-title="Delete this member and all his products and comments?">delete user</a>
                             <hr/>
-                            <a href="/backend/reportproducts/deletereports?p=<?=$this->product['project_id']?>" class="delete-this">delete reports</a>
+                            <a href="/backend/reportproducts/deletereports?p=<?=$this->product['project_id']?>" class="delete-this" data-title="Reset reports and make product visible again?">delete reports</a>
                         </div>
                         <?php
                             $this->rownum++;
@@ -121,7 +123,7 @@
             </div>
             <section class="explore-footer text-center">
                 <?php echo $this->paginationControl($this->products, 'Sliding',
-                    'partials/paginationControlBootstrap.phtml',
+                    'partials/paginationControlWithoutAjax.phtml',
                     array('params' => $this->filters, 'dom_target' => 'section#products-wrapper')); ?>
             </section>
         </div>
@@ -131,13 +133,15 @@
 <script>
     $('.delete-this').on('click', function (event) {
         event.stopPropagation();
-        var result = confirm("Delete This?");
+        var popupText = $(this).attr('data-title');
+        var result = confirm(popupText);
         if (result) {
             var target = $(this).attr('href');
             $.ajax({
                 url: target,
                 success: function (results) {
-                    alert('Deleted successfully');
+                    location.reload();
+                    //alert('Deleted successfully');
                 },
                 error: function () {
                     alert('Service is temporarily unavailable.');
