--- a/application/modules/default/views/scripts/explore/index.phtml
+++ b/application/modules/default/views/scripts/explore/index.phtml
@@ -56,9 +56,11 @@ $this->headLink()->appendStylesheet('/theme/flatui/css/explore_index.css');
                       <a href="<?= $helperBuildExploreUrl->buildExploreUrl($this->filters['category'], null,
                           'top') ?>"><span><?= $this->translate('Greatest') ?></span></a>
                   </li>
+                  <?php /*
                   <li class="right totoalcnt">
                       <small><?= $this->totalcount ?> <?= $labelTotalCounter ?></small>
                   </li>
+                  */?>
               </ul>
 
 
