--- a/application/modules/default/views/layout/flat_ui_template.phtml
+++ b/application/modules/default/views/layout/flat_ui_template.phtml
@@ -112,7 +112,7 @@
 <script src="/theme/backend/js/jquery.cookie.js"></script>
 <script src="/tools/md5.js"></script>
 <script type="text/javascript" src="/tools/fancybox2.1.4/jquery.fancybox.pack.js?v=2.1.4"></script>
-
+<script src="/theme/flatui/js/lib/jquery.rss.js"></script>
 <script src="/theme/flatui/js/script.js?<?= APPLICATION_VERSION ?>"></script>
 
 <?php
