--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5294,48 +5294,6 @@ main#plings-page{
 }
 /** plings END**/
 
-}
-
-/** plings **/
-
-main#plings-page{
-  .wrapper{
-       width:450px;        
-       padding:20px;
-       .title{
-          background-color:#ccc; 
-          height: 30px;
-      }      
-      .label{
-          padding-top: 10px;
-          padding-left: 0px;
-      }
-      .row:not(:first-child):hover{
-        background-color: #eef; 
-      }
-      
-    .depth1 {
-           padding-left: 20px;
-      }
-    .depth2 {
-           padding-left: 40px;
-      }
-    .depth3 {
-         padding-left: 60px;
-    }
-    .depth4 {
-         padding-left: 80px;
-    }
-    .depth5 {
-         padding-left: 100px;
-    }
-    .factor {
-         padding-right: 10px;
-    }
-  }
-}
-/** plings END**/
-
 /* new look test */
 
 
@@ -5351,5 +5309,16 @@ main#explore-content {
     border: 0px;
     border-top: 0px solid #ccc;
     background-color: transparent;
+    border: 0px;    
+    
   }
+}
+
+
+#rss-feeds{
+  ul{
+      margin: 0px;
+      padding: 0px;  
+  }
+  
 }
