--- a/httpdocs/theme/flatui/less/stylesheet.less
+++ b/httpdocs/theme/flatui/less/stylesheet.less
@@ -5306,9 +5306,15 @@ main#explore-content {
    background-color: @contentbgcolor; 
   }
   .product-list{
-    border: 0px;
-    border-top: 0px solid #ccc;
-    background-color: transparent;
+    border: 0px;    
+    
   }
 }
 
+#rss-feeds{
+  ul{
+      margin: 0px;
+      padding: 0px;  
+  }
+  
+}
