Remove dwolla as Pament option

--- a/application/modules/default/views/scripts/settings/partials/payment.phtml
+++ b/application/modules/default/views/scripts/settings/partials/payment.phtml
@@ -49,11 +49,14 @@
                     <?= $this->paymentform->paypal_mail->setAttrib('tabindex', 24) ?>
                 </div>
             </div>
+            <?php /* 
             <div class="row margin-top-15">
                 <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12">
                     <?= $this->paymentform->dwolla_id->setAttrib('tabindex', 25) ?>
                 </div>
             </div>
+            */
+            ?>
 
             <hr>
             <div class="row">
